Second version (MOAR pix, snippet)

--- a/presentation.html
+++ b/presentation.html
@@ -3,13 +3,13 @@
 <head>
 <link href="assets/38785450e9bdc107b7f43b3202b6bfdf.css" rel="stylesheet">
 <link href="assets/cbd95a3b7ed26f2a42b4c7dc0b0c598d.css" rel="stylesheet">
-<title>The treasures of Ruby core, one for each day</title>
+<title>The Treasures of Ruby, one for each day</title>
 <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">
 <script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script><script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
 <div class="reveal"><div class="slides">
-<section><h2>The treasures of Ruby core, one for each day</h2>
+<section><h2>The Treasures of Ruby, one for each day</h2>
 <p>Christophe Philemotte, Paris.rb, 6 May 2013</p>
 </section><section name="1">
 <h3>About me</h3>
@@ -80,23 +80,26 @@ ActiveSupport::Inflector.transliterate('Kurt G&ouml;del')
 </section><section name="13">
 <h3>String: How to clean up invalid byte sequences?</h3>
 </section><section name="14">
+<pre><code>ArgumentError: invalid byte sequence in UTF-8
+</code></pre>
+</section><section name="15">
 <pre><code>line = "This is an invalid byte sequence \244"
 
 
 line.upcase
 
 </code></pre>
-</section><section name="15">
+</section><section name="16">
 <pre><code>ArgumentError: invalid byte sequence in UTF-8
 </code></pre>
-</section><section name="16">
+</section><section name="17">
 <pre><code>line = "This is an invalid byte sequence \244"
 line.encode!('UTF-8', 'binary', invalid: :replace, undef: :replace, replace: '')
 
 line.upcase
 
 </code></pre>
-</section><section name="17">
+</section><section name="18">
 <pre><code>line = "This is an invalid byte sequence \244"
 line.scrub!('') # gem 'string-scrub' if &lt; 2.1
 
@@ -104,45 +107,45 @@ line.upcase
 
 </code></pre>
 
-</section><section name="18">
-<h3>Array: How to avoid duplicates in an Array?</h3>
 </section><section name="19">
+<h3>Array: How to avoid duplicates in an Array?</h3>
+</section><section name="20">
 <pre><code>
 contacts = %w[Granny Bill]
 contacts &lt;&lt; 'Granny' unless contacts.include? 'Granny'
 
 </code></pre>
-</section><section name="20">
+</section><section name="21">
 <pre><code>
 contacts = %w[Granny Bill]
 contacts &lt;&lt; 'Granny'
 contacts.uniq!
 </code></pre>
-</section><section name="21">
+</section><section name="22">
 <pre><code>require 'set'
 contacts = Set.new(%w[Granny Bill])
 contacts &lt;&lt; 'Granny'
 
 </code></pre>
-</section><section name="22">
-<h3>Array: How to find what elements are common to 2 Arrays?</h3>
 </section><section name="23">
+<h3>Array: How to find what elements are common to 2 Arrays?</h3>
+</section><section name="24">
 <pre><code>tags_post1 = [ 'ruby', 'rails', 'test' ]
 tags_post2 = [ 'test', 'rspec' ]
 
 common_tags = []
 tags_post1.each { |tag| common_tags &lt;&lt; tag if tags_post2.include? tag }
 </code></pre>
-</section><section name="24">
+</section><section name="25">
 <pre><code>tags_post1 = [ 'ruby', 'rails', 'test' ]
 tags_post2 = [ 'test', 'rspec' ]
 
 common_tags = tags_post1 &amp; tags_post2
 
 </code></pre>
-</section><section name="25">
-<h3>Hash: How to filter out some keys of a Hash?</h3>
 </section><section name="26">
+<h3>Hash: How to filter out some keys of a Hash?</h3>
+</section><section name="27">
 <pre><code>histogram = {
   monday: 5,
   tuesday: 7,
@@ -153,28 +156,37 @@ common_tags = tags_post1 &amp; tags_post2
   sunday: 0
 }
 </code></pre>
-</section><section name="27">
+</section><section name="28">
 <pre><code>
+
 
 
 histogram = histogram.select { |k, _| k != :saturday &amp;&amp; k != :sunday }
 </code></pre>
-</section><section name="28">
-<pre><code>
-require 'active_support/core_ext/hash' # not necessary if Rails
-
-histogram.except(:saturday, :sunday)
-</code></pre>
 </section><section name="29">
+<pre><code>def filter(hsh, *keys)
+  hsh.select { |k, _| !keys.include? k }
+end
+
+filter(histogram, :saturday, :sunday)
+</code></pre>
+</section><section name="30">
 <pre><code>def filter(hsh, *keys)
   hsh.reject { |k, _| keys.include? k }
 end
 
 filter(histogram, :saturday, :sunday)
 </code></pre>
-</section><section name="30">
-<h3>Hash: How to find the differences between two Hashes?</h3>
 </section><section name="31">
+<pre><code>
+
+require 'active_support/core_ext/hash' # not necessary if Rails
+
+histogram.except(:saturday, :sunday)
+</code></pre>
+</section><section name="32">
+<h3>Hash: How to find the differences between two Hashes?</h3>
+</section><section name="33">
 <pre><code>entries = {
   1372284000 =&gt; "CVE-2013-4073",
   1368482400 =&gt; "CVE-2013-2065"
@@ -186,31 +198,46 @@ updated_entries = {
   1368482400 =&gt; "CVE-2013-2065"
 }
 </code></pre>
-</section><section name="32">
+</section><section name="34">
 <pre><code>new_entries = updated_entries.reject { |k, _| entries.include? k }
 </code></pre>
-</section><section name="33">
-<p><img src="assets/71b39a90db1abe7446a802174ecc0207.jpg" alt="Cavern of Books"></p>
-</section><section name="34">
-<p><img src="assets/b115e2d480e21ad7e3ccb565fe3bf319.jpg" alt="Treasure"></p>
 </section><section name="35">
-<h3>Hunt Treasures</h3>
-<ol>
-<li><p>Read the doc: the full page</p></li>
-<li><p>Read the source</p></li>
-<li><p>SO, Google</p></li>
-<li><p>Blogs, Podcasts, &hellip;</p></li>
-<li><p>Discuss</p></li>
-</ol>
+<p><img src="assets/71b39a90db1abe7446a802174ecc0207.jpg" alt="Cavern of Books"></p>
 </section><section name="36">
-<h3>Where to start?</h3>
+<p><img src="assets/b115e2d480e21ad7e3ccb565fe3bf319.jpg" alt="Treasure"></p>
+</section><section name="37">
+<p><img src="assets/4407b4b704e2b0dada61adf9ed327a66.jpg" alt="Treasure Map"></p>
+</section><section name="38">
+<h4>1. Read the doc: yes, the full page</h4>
+</section><section name="39">
 <ul>
 <li><p>Ruby Doc <a href="http://ruby-doc.org/">http://ruby-doc.org/</a></p></li>
 <li><p>Rails Doc <a href="http://api.rubyonrails.org/">http://api.rubyonrails.org/</a></p></li>
 <li><p>Apidock <a href="http://apidock.com/">http://apidock.com/</a></p></li>
 <li><p>OmniRef <a href="https://www.omniref.com/">https://www.omniref.com/</a></p></li>
-<li><p>Ruby Source <a href="https://github.com/ruby/ruby">https://github.com/ruby/ruby</a></p></li>
-<li><p>Rails Source <a href="https://github.com/rails/rails">https://github.com/rails/rails</a></p></li>
+</ul>
+</section><section name="40">
+<h4>2. Read the source, Luke</h4>
+<p><img src="assets/5dd4511f02f79275f891e9ee540aba1e.jpg" alt="Read the source, Luke"></p>
+</section><section name="41">
+<ul>
+<li><p>Gem source</p></li>
+<li><p>Rails source <a href="https://github.com/rails/rails">https://github.com/rails/rails</a></p></li>
+</ul>
+</section><section name="42">
+<h4>3. SO, Google</h4>
+<p><img src="assets/b074c9950cf55f15c789838be348320c.jpg" alt="SO"></p>
+</section><section name="43">
+<h4>4. Blogs, Podcasts, Conferences, Meetup&hellip;</h4>
+<p><img src="assets/1b0069be4f5a841ec9ed1b7826ee7704.png" alt="Paris.rb"></p>
+</section><section name="44">
+<h4>5. Discuss</h4>
+<p><img src="assets/5c285323197eecaf8d4f32f7b190d2c9.gif" alt="wally"></p>
+</section><section name="45">
+<ul>
+<li><p>Your coworker/colleague</p></li>
+<li><p>A friend</p></li>
+<li><p>ME :)</p></li>
 </ul></section>
 </div></div>
 <script src="assets/8244e91e3efc1ad6285d9beb8125fe4b.js" type="text/javascript"></script><script src="assets/15cf8d7f8a9b02264e443d28141a5fdf.js" type="text/javascript"></script><script>Reveal.initialize({ dependencies: [], local:true,history:true });</script>
